# pics-rs

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  tsconfig.base.json
apps/pics-rs/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/pics-rs/src/: App.tsx  index.css  main.tsx
apps/pics-rs/src-tauri/: Cargo.toml  tauri.conf.json
apps/pics-rs/src-tauri/capabilities/: default.json
apps/pics-rs/src-tauri/src/: error.rs  lib.rs  main.rs
apps/pics-rs/src-tauri/src/commands/: export.rs  gallery.rs  mod.rs  thumbnail.rs  transform.rs
apps/pics-rs/src/components/: CropOverlay.tsx  DownloadProgress.tsx  ExportDialog.tsx  Gallery.tsx  GalleryTile.tsx  ResizePanel.tsx  StraightenControl.tsx  Toolbar.tsx  Viewer.tsx
apps/pics-rs/src/hooks/: useKeyboardShortcuts.ts  useThumbnail.ts
apps/pics-rs/src/lib/: actions.ts  persistence.ts  rafThrottle.ts  tauri.ts  thumbnailQueue.ts
apps/pics-rs/src/stores/: galleryStore.ts  preferencesStore.ts  uiStore.ts  viewerStore.ts
apps/pics-rs/src/types/: image.ts
docs/: design-review-ui-and-rust.md  specs.md
testing/issues/: initial-functionality.md  root-cause-analysis.md
